java-design-patterns-project/src/main/java/com/farhad/example/designpatterns/factory/bad/VehicleColor.java
package com.farhad.example.designpatterns.factory.bad;

public enum VehicleColor {
    REB,
    GREEN,
    BLUE,
    BLACK,
    WHITE

}
